--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -8,8 +8,8 @@ html,
 body,
 #root,
 .app {
-    height: 100%;
-    width: 100%;
-    /* font-family: "Montserrat", sans-serif; */
-    @apply text-gray-500;
+  height: 100%;
+  width: 100%;
+  /* font-family: "Montserrat", sans-serif; */
+  @apply text-gray-500;
 }
